--- a/README
+++ b/README
@@ -4,4 +4,4 @@ Desription : The Point of Sale demo system is the check handling and creation fu
 
 The NetBeans project is available in the repository as well.
 
-03/24/2014 : Created the intial repository and committed it to GitHub.
+03/24/2014 : Created the intial repository and committed it to GitHub. This is a work in progress and I do not consider it finalized or ready for use as a true example of my capabilities.
